update README config documentation